# BRIEF-Binary-Descriptor-AVX2

./: .gitignore  CMakeLists.txt  README.md
example/: Timer.h  main.cpp
src/: AlignedAllocator.h  BRIEF.cpp  BRIEF.h  BRIEF.m4  MathKernels.ispc  Types.h  Unroll.m4
